--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/TristeTempsChang/sequelize-doc#readme",
   "dependencies": {
     "express": "^4.21.1",
+    "mysql2": "^3.11.4",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
   }
